--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -5,6 +5,7 @@ html,body,#app{
     min-width: 50vw;
     min-height: 50vh;
     overflow: hidden;
+    font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
 }
 
 .el-breadcrumb{
@@ -40,3 +41,34 @@ min-height: 300px;
     width: 200px;
     min-height: 400px;
 }
+
+
+
+/* 设置滚动条的样式 */
+::-webkit-scrollbar {
+    width:12px;
+    }
+    /* 滚动槽 */
+    ::-webkit-scrollbar-track {
+    -webkit-box-shadow:inset006pxrgba(0,0,0,0.3);
+    border-radius:10px;
+    }
+    /* 滚动条滑块 */
+    ::-webkit-scrollbar-thumb {
+    border-radius:10px;
+    background:rgba(0,0,0,0.1);
+    -webkit-box-shadow:inset006pxrgba(0,0,0,0.5);
+    }
+    ::-webkit-scrollbar-thumb:window-inactive {
+    background:rgba(229, 229, 229);
+    }
+
+    .el-table,
+    .el-table--fit ,
+    .el-table--border ,
+    .el-table--fluid-height ,
+    .el-table--scrollable-y ,
+    .el-table--enable-row-hover ,
+    .el-table--enable-row-transition{
+overflow-y: hidden !important;
+    }
